added some changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Portfolio</h1>
+    <h1>My Portfolio</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus obcaecati pariatur ipsa impedit! Cum similique
         quisquam itaque ab sequi porro repellat molestias nihil earum cupiditate atque, at nam aspernatur aperiam.
         Qui incidunt exercitationem aut voluptatibus minima quidem perferendis veniam quibusdam? Enim, minus. Dolores
